# RayTracing

rayTrace/: .gitignore  rayTrace.sln
rayTrace/Debug/: rayTrace.ilk
rayTrace/rayTrace/: CMakeLists.txt  aabb.h  aarect.h  box.h  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  image123.ppm  image234.ppm  main.cpp  material.h  moving_sphere.h  primeCommon.h  ray.h  rayTrace.vcxproj  rayTrace.vcxproj.filters  rtconst.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h  vec3.h
rayTrace/rayTrace/Debug/: rayTrace.exe.recipe  vc142.idb
rayTrace/rayTrace/Debug/rayTrace.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rayTrace.lastbuildstate
rayTrace/rayTrace/OpitX/sutil/: sutilapi.h
rayTrace/rayTrace/data/: Cornell box.txt  scene.txt  scene2.txt
rayTrace/rayTrace/x64/Debug/: main.obj.enc  rayTrace.exe.recipe  vc142.idb
rayTrace/rayTrace/x64/Debug/rayTrace.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rayTrace.lastbuildstate
rayTrace/rayTrace/x64/Release/: rayTrace.exe.recipe
rayTrace/rayTrace/x64/Release/rayTrace.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rayTrace.lastbuildstate  rayTrace.write.1u.tlog
rayTrace/x64/Debug/: rayTrace.ilk
rayTrace/x64/Release/: 2image15_reverse.ppm  2image15_under.ppm  2image16.ppm  2image17.ppm  2image17_lamp.ppm  2image17_lamp_4000spp.ppm  2image2.ppm  image234.ppm  rayTrace.iobj  rayTrace.ipdb
